--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				</a>
 
 				<ul>
-					<li><a href="">Студія</a></li>
-					<li><a href="">Портфоліо</a></li>
+					<li><a href="./index.html">Студія</a></li>
+					<li><a href="./porfolio.html">Портфоліо</a></li>
 					<li><a href="">Контакти</a></li>
 				</ul>
 			</nav>
