--- a/porfolio.html
+++ b/porfolio.html
@@ -39,63 +39,63 @@
 			<ul>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img.jpg" alt="" />
 						<h2>Технокряк</h2>
 						<p>Веб-сайт</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img2.jpg" alt="" />
 						<h2>Постер New Orlean vs Golden Star</h2>
 						<p>Дизайн</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img3.jpg" alt="" />
 						<h2>Ресторан Seafood</h2>
 						<p>Додаток</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img4.jpg" alt="" />
 						<h2>Проєкт Prime</h2>
 						<p>Маркетинг</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img5.jpg" alt="" />
 						<h2>Проєкт Boxes</h2>
 						<p>Додаток</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img6.jpg" alt="" />
 						<h2>Inspiration has no Borders</h2>
 						<p>Веб-сайт</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img7.jpg" alt="" />
 						<h2>Видання Limited Edition</h2>
 						<p>Дизайн</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img8.jpg" alt="" />
 						<h2>Проєкт LAB</h2>
 						<p>Маркетинг</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="" alt="" />
+						<img src="./images/portfolio/img9.jpg" alt="" />
 						<h2>Growing Business</h2>
 						<p>Додаток</p>
 					</a>
