--- a/porfolio.html
+++ b/porfolio.html
@@ -1,125 +1,131 @@
 <!DOCTYPE html>
 <html lang="uk">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/styles.css" />
-		<title>Web Studio</title>
-	</head>
-	<body>
-		<header>
-			<nav>
-				<a href="./index.html">
-					<span>Web</span>
-					Studio
-				</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">
+          <span>Web</span>
+          Studio
+        </a>
 
-				<ul>
-					<li><a href="./index.html">Студія</a></li>
-					<li><a href="./porfolio.html">Портфоліо</a></li>
-					<li><a href="">Контакти</a></li>
-				</ul>
-			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
-		</header>
-		<main>
-			<!--Logical header, need to be hidden with css -->
-			<h1>Our works</h1>
-			<ul>
-				<li><a href="">Усі</a></li>
-				<li><a href="">Веб-сайти</a></li>
-				<li><a href="">Додатки</a></li>
-				<li><a href="">Дизайн</a></li>
-				<li><a href="">Маркетинг</a></li>
-			</ul>
-			<ul>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img.jpg" alt="" />
-						<h2>Технокряк</h2>
-						<p>Веб-сайт</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img2.jpg" alt="" />
-						<h2>Постер New Orlean vs Golden Star</h2>
-						<p>Дизайн</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img3.jpg" alt="" />
-						<h2>Ресторан Seafood</h2>
-						<p>Додаток</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img4.jpg" alt="" />
-						<h2>Проєкт Prime</h2>
-						<p>Маркетинг</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img5.jpg" alt="" />
-						<h2>Проєкт Boxes</h2>
-						<p>Додаток</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img6.jpg" alt="" />
-						<h2>Inspiration has no Borders</h2>
-						<p>Веб-сайт</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img7.jpg" alt="" />
-						<h2>Видання Limited Edition</h2>
-						<p>Дизайн</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img8.jpg" alt="" />
-						<h2>Проєкт LAB</h2>
-						<p>Маркетинг</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./images/portfolio/img9.jpg" alt="" />
-						<h2>Growing Business</h2>
-						<p>Додаток</p>
-					</a>
-				</li>
-			</ul>
-		</main>
-		<footer>
-			<div>
-				<a href="./index.html">
-					<span>Web</span>
-					Studio
-				</a>
-				<address>
-					<ul>
-						<li>
-							<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" rel="noopener noreferrer">
-								м. Київ, пр-т Лесі Українки, 26
-							</a>
-						</li>
-						<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-					</ul>
-				</address>
-			</div>
-		</footer>
-	</body>
+        <ul>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./porfolio.html">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <!--Logical header, need to be hidden with css -->
+      <h1>Our works</h1>
+      <ul>
+        <li><button type="button">Усі</button></li>
+        <li><button type="button">Веб-сайти</button></li>
+        <li><button type="button">Додатки</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img.jpg" alt="" />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img2.jpg" alt="" />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img3.jpg" alt="" />
+            <h2>Ресторан Seafood</h2>
+            <p>Додаток</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img4.jpg" alt="" />
+            <h2>Проєкт Prime</h2>
+            <p>Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img5.jpg" alt="" />
+            <h2>Проєкт Boxes</h2>
+            <p>Додаток</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img6.jpg" alt="" />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img7.jpg" alt="" />
+            <h2>Видання Limited Edition</h2>
+            <p>Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img8.jpg" alt="" />
+            <h2>Проєкт LAB</h2>
+            <p>Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/portfolio/img9.jpg" alt="" />
+            <h2>Growing Business</h2>
+            <p>Додаток</p>
+          </a>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <div>
+        <a href="./index.html">
+          <span>Web</span>
+          Studio
+        </a>
+        <address>
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" rel="noopener noreferrer">
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+  </body>
 </html>
