--- a/index.html
+++ b/index.html
@@ -14,61 +14,74 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">
-          <span>Web</span>
-          Studio
-        </a>
+    <header class="header">
+      <nav class="nav">
+        <a class="link logo" href="./index.html"> <span class="accent">Web</span>Studio </a>
 
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./porfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="list menu">
+          <li class="menu-item">
+            <a class="link menu-link current-text" href="./index.html">Студія</a>
+          </li>
+          <li class="menu-item"><a class="link menu-link" href="./porfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a class="link menu-link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list header-contacts">
+        <li class="header-contacts-item">
+          <a class="link header-contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contacts-item">
+          <a class="link header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <main>
+    <main class="main-content">
       <!--Hero-->
-      <section>
+      <section class="hero">
         <div>
-          <h1>Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
+          <h1 class="hero-header">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
       <!--Our benefits-->
-      <section>
+      <section class="benafits">
         <!--Logical header, need to be hidden with css -->
-        <h2>Наші переваги</h2>
+        <h2 class="section-header hidden">Наші переваги</h2>
 
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <ul class="list benafits-list">
+          <li class="benafit-item">
+            <h3 class="benafit-header">Увага до деталей</h3>
+            <p class="benafit-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="benafit-item">
+            <h3 class="benafit-header">Пунктуальність</h3>
+            <p class="benafit-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="benafit-item">
+            <h3 class="benafit-header">Планування</h3>
+            <p class="benafit-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>Сучасні Технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="benafit-item">
+            <h3 class="benafit-header">Сучасні Технології</h3>
+            <p class="benafit-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <!--What we do-->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
+      <section class="we-do">
+        <h2 class="section-header">Чим ми займаємося</h2>
+        <ul class="list we-do-list">
+          <li class="we-do-item">
             <img
               src="./images/what-we-do/img-1.jpg"
               alt="Стіл на якому лежить аркуш паперу з схематично зображеною логікою сайту, та руки програміста на клавіатурі, який пише код сайту, на моніторі та планшеті видно фрагменти коду"
@@ -76,7 +89,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="we-do-item">
             <img
               src="./images/what-we-do/img-2.jpg"
               alt="Дизайнер розробляє прототип, як має виглядати додаток, на ноутбуці та моніторі зображені приклади екранів модільного телефону з варіантами дизайну"
@@ -84,7 +97,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="we-do-item">
             <img
               src="./images/what-we-do/img-3.jpg"
               alt="Дизайнер підбирає палітру кольорів тримаючи в руках планшет з палітрою у вигляді сот"
@@ -95,67 +108,78 @@
         </ul>
       </section>
       <!--Our team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="section-header">Наша команда</h2>
+        <ul class="list team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/img1.jpg"
               alt="Портрет Ігоря Дем'яненко Product Designer"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-header">Ігор Дем'яненко</h3>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/img2.jpg"
               alt="Портрет Ольгм Рєпіної Frontend Developer"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-header">Ольга Рєпіна</h3>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/img3.jpg"
               alt="Портрет Миколи Тарасова Marketing"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-header">Микола Тарасов</h3>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/img4.jpg"
               alt="Портрет Михайла Єрмакова UI Designer"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-header">Михайло Єрмаков</h3>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div>
-        <a href="./index.html">
-          <span>Web</span>
-          Studio
+        <a class="link logo logo-white" href="./index.html" lang="en">
+          <span class="accent">Web</span>Studio
         </a>
-        <address>
-          <ul>
-            <li>
-              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" rel="noopener noreferrer">
+        <address class="contacts">
+          <ul class="list contacts-list">
+            <li class="contact-item">
+              <a
+                class="link contact-link address"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                rel="noopener noreferrer"
+              >
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="contact-item">
+              <a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contact-item">
+              <a class="link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
