--- a/porfolio.html
+++ b/porfolio.html
@@ -14,115 +14,178 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">
-          <span>Web</span>
-          Studio
+    <header class="header">
+      <nav class="nav">
+        <a class="link logo" href="./index.html" lang="en">
+          <span class="accent">Web</span>Studio
         </a>
 
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./porfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="list menu">
+          <li class="menu-item"><a class="link menu-link" href="./index.html">Студія</a></li>
+          <li class="menu-item">
+            <a class="link menu-link current-text" href="./porfolio.html">Портфоліо</a>
+          </li>
+          <li class="menu-item"><a class="link menu-link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list header-contacts">
+        <li class="header-contacts-item">
+          <a class="link header-contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contacts-item">
+          <a class="link header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <main>
+    <main class="page-portfolio">
       <!--Logical header, need to be hidden with css -->
-      <h1>Our works</h1>
-      <ul>
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+      <h1 class="portfolio-main-header hidden">Наші роботи</h1>
+      <ul class="list portfolio-filters">
+        <li class="filter-item">
+          <button class="filter-btn current-bg" type="button">Усі</button>
+        </li>
+        <li class="filter-item"><button class="filter-btn" type="button">Веб-сайти</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Додатки</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
       </ul>
-      <ul>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img.jpg" alt="" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+      <ul class="list portfolio-list">
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img.jpg"
+              alt="Ноутбук на екрані якого зображено сайт Технокряк"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Технокряк</h2>
+            <p class="portfolio-item-text">Веб-сайт</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img2.jpg" alt="" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img2.jpg"
+              alt="Два баскетболісти, один в іншого намагається вибити м'яч у стрибку"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-item-text">Дизайн</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img3.jpg" alt="" />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img3.jpg"
+              alt="Риба до гори головою і повер написано назву реторану"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="portfolio-item-text">Додаток</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img4.jpg" alt="" />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img4.jpg"
+              alt="Великі чорні навушники"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Проєкт <span lang="en">Prime</span></h2>
+            <p class="portfolio-item-text">Маркетинг</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img5.jpg" alt="" />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img5.jpg"
+              alt="Дві коробочки біла більша і крафтова менша з написами"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="portfolio-item-text">Додаток</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img6.jpg" alt="" />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img6.jpg"
+              alt="Монітор і на ньому зображено сайт компанії Inspiration has no Borders"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header" lang="en">Inspiration has no Borders</h2>
+            <p class="portfolio-item-text">Веб-сайт</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img7.jpg" alt="" />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img7.jpg"
+              alt="розгорнутий журнал, на лівому боці зображення дівчини з феном в руках, та через волосся не видно обличча та ноги та руки дівчини, яка тримає сумку, праворуч дві дівчини спиною піднявши руки порізні боки один від одної з символом Victory"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="portfolio-item-text">Дизайн</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img8.jpg" alt="" />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img8.jpg"
+              alt="Бірка з мотузком і на най напис LAB EL TAG"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header">Проєкт <span lang="en">LAB</span></h2>
+            <p class="portfolio-item-text">Маркетинг</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/img9.jpg" alt="" />
-            <h2>Growing Business</h2>
-            <p>Додаток</p>
+        <li class="portfolio-item">
+          <a class="link portfolio-link" href="">
+            <img
+              src="./images/portfolio/img9.jpg"
+              alt="Ноутбук на столі, чоловічі руки на клавіатурі та на екрані зображено сайт Growing Business"
+              width="370"
+              height="294"
+            />
+            <h2 class="portfolio-item-header" lang="en">Growing Business</h2>
+            <p class="portfolio-item-text">Додаток</p>
           </a>
         </li>
       </ul>
     </main>
-    <footer>
+    <footer class="footer">
       <div>
-        <a href="./index.html">
-          <span>Web</span>
-          Studio
+        <a class="link logo logo-white" href="./index.html" lang="en">
+          <span class="accent">Web</span>Studio
         </a>
-        <address>
-          <ul>
-            <li>
-              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" rel="noopener noreferrer">
+        <address class="contacts">
+          <ul class="list contacts-list">
+            <li class="contact-item">
+              <a
+                class="link contact-link address"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                rel="noopener noreferrer"
+              >
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="contact-item">
+              <a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contact-item">
+              <a class="link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
