Added color to link, font-size to button, cover all main content portfolio on section

--- a/porfolio.html
+++ b/porfolio.html
@@ -40,129 +40,131 @@
       </ul>
     </header>
     <main class="page-portfolio">
-      <!--Logical header, need to be hidden with css -->
-      <h1 class="portfolio-main-header hidden">Наші роботи</h1>
-      <ul class="list portfolio-filters">
-        <li class="filter-item">
-          <button class="filter-btn current-bg" type="button">Усі</button>
-        </li>
-        <li class="filter-item"><button class="filter-btn" type="button">Веб-сайти</button></li>
-        <li class="filter-item"><button class="filter-btn" type="button">Додатки</button></li>
-        <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
-        <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
-      </ul>
-      <ul class="list portfolio-list">
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img.jpg"
-              alt="Ноутбук на екрані якого зображено сайт Технокряк"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Технокряк</h2>
-            <p class="portfolio-item-text">Веб-сайт</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img2.jpg"
-              alt="Два баскетболісти, один в іншого намагається вибити м'яч у стрибку"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h2>
-            <p class="portfolio-item-text">Дизайн</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img3.jpg"
-              alt="Риба до гори головою і повер написано назву реторану"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="portfolio-item-text">Додаток</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img4.jpg"
-              alt="Великі чорні навушники"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Проєкт <span lang="en">Prime</span></h2>
-            <p class="portfolio-item-text">Маркетинг</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img5.jpg"
-              alt="Дві коробочки біла більша і крафтова менша з написами"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Проєкт <span lang="en">Boxes</span></h2>
-            <p class="portfolio-item-text">Додаток</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img6.jpg"
-              alt="Монітор і на ньому зображено сайт компанії Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header" lang="en">Inspiration has no Borders</h2>
-            <p class="portfolio-item-text">Веб-сайт</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img7.jpg"
-              alt="розгорнутий журнал, на лівому боці зображення дівчини з феном в руках, та через волосся не видно обличча та ноги та руки дівчини, яка тримає сумку, праворуч дві дівчини спиною піднявши руки порізні боки один від одної з символом Victory"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Видання <span lang="en">Limited Edition</span></h2>
-            <p class="portfolio-item-text">Дизайн</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img8.jpg"
-              alt="Бірка з мотузком і на най напис LAB EL TAG"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header">Проєкт <span lang="en">LAB</span></h2>
-            <p class="portfolio-item-text">Маркетинг</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a class="link portfolio-link" href="">
-            <img
-              src="./images/portfolio/img9.jpg"
-              alt="Ноутбук на столі, чоловічі руки на клавіатурі та на екрані зображено сайт Growing Business"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-item-header" lang="en">Growing Business</h2>
-            <p class="portfolio-item-text">Додаток</p>
-          </a>
-        </li>
-      </ul>
+      <section>
+        <!--Logical header, need to be hidden with css -->
+        <h1 class="portfolio-main-header hidden">Наші роботи</h1>
+        <ul class="list portfolio-filters">
+          <li class="filter-item">
+            <button class="filter-btn current-bg" type="button">Усі</button>
+          </li>
+          <li class="filter-item"><button class="filter-btn" type="button">Веб-сайти</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Додатки</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="list portfolio-list">
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img.jpg"
+                alt="Ноутбук на екрані якого зображено сайт Технокряк"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Технокряк</h2>
+              <p class="portfolio-item-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="Два баскетболісти, один в іншого намагається вибити м'яч у стрибку"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="portfolio-item-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="Риба до гори головою і повер написано назву реторану"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-item-text">Додаток</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="Великі чорні навушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Проєкт <span lang="en">Prime</span></h2>
+              <p class="portfolio-item-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="Дві коробочки біла більша і крафтова менша з написами"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Проєкт <span lang="en">Boxes</span></h2>
+              <p class="portfolio-item-text">Додаток</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="Монітор і на ньому зображено сайт компанії Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header" lang="en">Inspiration has no Borders</h2>
+              <p class="portfolio-item-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="розгорнутий журнал, на лівому боці зображення дівчини з феном в руках, та через волосся не видно обличча та ноги та руки дівчини, яка тримає сумку, праворуч дві дівчини спиною піднявши руки порізні боки один від одної з символом Victory"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Видання <span lang="en">Limited Edition</span></h2>
+              <p class="portfolio-item-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="Бірка з мотузком і на най напис LAB EL TAG"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header">Проєкт <span lang="en">LAB</span></h2>
+              <p class="portfolio-item-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a class="link portfolio-link" href="">
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="Ноутбук на столі, чоловічі руки на клавіатурі та на екрані зображено сайт Growing Business"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-item-header" lang="en">Growing Business</h2>
+              <p class="portfolio-item-text">Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <div>
