Corrections benefits headers font-size, current page, hidden headers

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!--Our benefits-->
       <section class="benafits">
         <!--Logical header, need to be hidden with css -->
-        <h2 class="section-header hidden">Наші переваги</h2>
+        <h2 class="section-header visually-hidden">Наші переваги</h2>
 
         <ul class="list benafits-list">
           <li class="benafit-item">
