--- a/porfolio.html
+++ b/porfolio.html
@@ -42,7 +42,7 @@
     <main class="page-portfolio">
       <section>
         <!--Logical header, need to be hidden with css -->
-        <h1 class="portfolio-main-header hidden">Наші роботи</h1>
+        <h1 class="portfolio-main-header visually-hidden">Наші роботи</h1>
         <ul class="list portfolio-filters">
           <li class="filter-item">
             <button class="filter-btn current-bg" type="button">Усі</button>
